add and view are complete

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title></title>
 
     <link href="./bower_components/angular-material/angular-material.css" rel="stylesheet" type="text/css"/>
+    <link href="./bower_components/angular-material-icons/angular-material-icons.css" rel="stylesheet" type="text/css"/>
+
 
     <link href="style.css" type="text/css" rel="stylesheet"/>
     <script src="./bower_components/angular/angular.js"></script>
@@ -12,6 +14,7 @@
     <script src="./bower_components/angular-aria/angular-aria.js"></script>
     <script src="./bower_components/angular-material/angular-material.js"></script>
     <script src="./bower_components/angular-new-router/dist/router.es5.js"></script>
+    <script src="./bower_components/angular-material-icons/angular-material-icons.js"></script>
     <script src="./bower_components/firebase/firebase.js"></script>
     <script src="./bower_components/angularfire/dist/angularfire.min.js"></script>
 
